--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
-}
+$bg-color : #687980;
+$text-color : #fff;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background-color: $bg-color;
+    color: $text-color;
+    margin: 0 auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home-image{
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.paragraph{
+    max-width: 600px;
 }
